# initiativescout

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  PLAN.md  README.md  RELEASE.md  pyproject.toml
archive/: initiative-tracker  package-lock.json  package.json  pyproject.toml  talent-scout-log-prototype.html
archive/assets/: Student_Initiatives_Partnership_Deck.pptx  create_presentation.js
archive/config/: llm_scoring_config.yaml  market_aliases.yaml  market_taxonomy.yaml  technology_aliases.yaml  technology_taxonomy.yaml  tier_thresholds.yaml
archive/data/: initiatives.db-journal  initiatives_tum_lmu_hm_2026-02-18.db  initiatives_tum_lmu_hm_2026-02-18.db-journal
archive/data/exports/: dd_gates.json  dd_score_components.json  dd_scores.json  initiatives_master.json  investable_rankings.csv  investment_memos.json  team_capability_matrix.json  top_market_opportunities.csv  top_market_opportunities.json  top_outreach_targets.csv  top_outreach_targets.json  top_talent_alumni_angels.csv  top_talent_alumni_angels.json  top_talent_operators.csv  top_talent_operators.json  top_teams.csv  top_teams.json  top_technologies.csv  top_technologies.json  top_venture_upside.csv  top_venture_upside.json  watchlist_rankings.csv  watchlist_rankings.json
archive/docs/obsidian/: Student Initiatives - Alumni Network.md  Student Initiatives - Contacts.md  Student Initiatives - Overview.md  Student Initiatives - Rating System.md  Student Initiatives - Strategy & Business Model.md  Student Initiatives - Tier 1 Profiles.md
archive/docs/research/: alumni_network.md  munich_student_initiatives_comprehensive.md  munich_student_initiatives_database.md  tier1_contacts.md
archive/docs/specs/: user_stories.md  (+1 more)
archive/initiative_tracker/: __init__.py  cli.py  config.py  db.py  models.py  results_view.py  store.py  types.py  utils.py
archive/scripts/: build_system_scoring_deck.js  export_university_initiatives_excel.py  install_app.sh  uninstall_app.sh
archive/tests/: test_dd_gates.py  test_dd_manual_import.py  test_dd_people_precision.py  test_dd_rankings.py  test_dd_report.py  test_dd_v2.py  test_dedup.py  test_dossiers.py  test_explainability.py  test_people_ingestion.py  test_rankings.py  test_results_view.py  test_scoring.py  test_scrapers.py  test_seed_markdown.py  test_status_cli.py  test_talent_rankings.py
scout/: __init__.py  app.py  db.py  embedder.py  enricher.py  executor.py  exporter.py  importer.py  mcp_server.py  models.py  pyproject.toml  schema.py  schemas.py  scorer.py  scrapers.py  sdk.py  services.py  setup_mcp.py  utils.py
scout/data/: scout.db
scout/enricher/: __init__.py  _apis.py  _core.py  _discovery.py  _github.py  _metadata.py  _website.py
scout/static/: app.js  index.html  style.css
scout/tests/: test_api_integration.py  test_batch_tools.py  test_enricher.py  test_llm_workflows.py  test_refactors.py  test_scripts.py
(+54 files in other folders)
