[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
version = "1.2.0"
description = "Outreach intelligence — discover, enrich, and score entities for outreach"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "httpx>=0.27.0",
  "lxml>=5.3.0",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.26.0"]
xlsx = ["openpyxl>=3.1.5"]
embeddings = ["model2vec>=0.4.0", "numpy>=1.24.0"]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
gemini = ["openai>=1.50.0"]
dns = ["dnspython>=2.4.0"]
crawl = ["crawl4ai>=0.8.0", "ddgs>=9.0.0"]
extract = ["trafilatura>=2.0.0", "extruct>=0.17.0"]
all = [
  "scout[mcp]",
  "scout[xlsx]",
  "scout[embeddings]",
  "scout[anthropic]",
  "scout[openai]",
  "scout[dns]",
  "scout[crawl]",
  "scout[extract]",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["."]
include = ["scout*"]

[tool.setuptools.package-data]
scout = ["static/**/*", "prompts/**/*.txt"]

[project.scripts]
scout = "scout.app:main"
scout-mcp = "scout.mcp_server:main"
scout-setup = "scout.setup_mcp:main"
