[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
version = "0.1.0"
description = "Outreach intelligence for Munich student initiatives"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "openpyxl>=3.1.5",
  "httpx>=0.27.0",
  "lxml>=5.3.0",
  "pydantic>=2.10.0",
  "anthropic>=0.40.0",
  "python-multipart>=0.0.9",
  "mcp>=1.26.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]

[tool.setuptools]
packages = ["scout"]
package-dir = {"scout" = "."}

[project.scripts]
scout = "scout.app:main"
scout-mcp = "scout.mcp_server:main"
